--- a/ui/html/base.tmpl.html
+++ b/ui/html/base.tmpl.html
@@ -4,6 +4,8 @@
     <head>
         <meta charset="utf-8">
         <title>{{template "title" .}} - slopshop</title>
+        <link rel="stylesheet" href="/static/css/main.css">
+        <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon">
     </head>
     <body>
         <header>
@@ -14,6 +16,7 @@
             {{template "main" .}}
         </main>
         <footer>Powered by </a href="https://golang.org/">Go</a></footer>
+        <script src="/static/js/main.js" type="text/javascript"></script>
     </body>
 </html>
 {{end}}
