--- a/ui/html/base.tmpl.html
+++ b/ui/html/base.tmpl.html
@@ -3,13 +3,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>{{template "title" .}} - slopshop</title>
+        <title>{{template "title" .}} - snippetbox</title>
         <link rel="stylesheet" href="/static/css/main.css">
         <link rel="shortcut icon" href="/static/img/favicon.ico" type="image/x-icon">
     </head>
     <body>
         <header>
-            <h1><a href="/">slopshop</a></h1>
+            <h1><a href="/">snippetbox</a></h1>
         </header>
         {{template "nav" .}}
         <main>
