--- a/ui/html/pages/view.tmpl.html
+++ b/ui/html/pages/view.tmpl.html
@@ -1,15 +1,16 @@
 {{define "title"}}Snippet #{{.Snippet.ID}}{{end}}
 
 {{define "main"}}
+    {{with .Snippet}}
     <div class="snippet">
         <div class="metadata">
-            <strong>{{.Snippet.Title}}</strong>
-            <span>#{{.Snippet.ID}}</span>
+            <strong>{{.Title}}</strong>
+            <span>#{{.ID}}</span>
         </div>
-        <pre><code>{{.Snippet.Content}}</code></pre>
+        <pre><code>{{.Content}}</code></pre>
         <div class="metadata">
-            <time>Created: {{.Snippet.Created}}</time>
-            <time>Expires: {{.Snippet.Expires}}</time>
+            <time>Created: {{.Created}}</time>
+            <time>Expires: {{.Expires}}</time>
         </div>
     </div>
 {{end}}
