--- a/ui/html/pages/home.tmpl.html
+++ b/ui/html/pages/home.tmpl.html
@@ -1,23 +1,20 @@
-{{define "title"}}Home{{end}}
-
-{{define "main"}}
-    <h2>Latest Snippets</h2>
-    {{if .Snippets }}
-    <table>
-        <tr>
-            <th>Title</th>
-            <th>Created</th>
-            <th>ID</th>
-        </tr>
-        {{range .Snippets}}
-        <tr>
-            <td><a href="/snippet/view?id={{.ID}}">{{.Title}}</a></td>
-            <td>{{.Created}}</td>
-            <td>#{{.ID}}</td>
-        </tr>
-        {{end}}
-    </table>
-    {{else}}
-        <p>There is nothing to see here yet!</p>
+{{define "title"}}Home{{end}} {{define "main"}}
+<h2>Latest Snippets</h2>
+{{if .Snippets }}
+<table>
+    <tr>
+        <th>Title</th>
+        <th>Created</th>
+        <th>ID</th>
+    </tr>
+    {{range .Snippets}}
+    <tr>
+        <td><a href="/snippet/view?id={{.ID}}">{{.Title}}</a></td>
+        <td>{{humanDate .Created}}</td>
+        <td>#{{.ID}}</td>
+    </tr>
     {{end}}
-{{end}}
+</table>
+{{else}}
+<p>There is nothing to see here yet!</p>
+{{end}} {{end}}
