--- a/ui/html/pages/view.tmpl.html
+++ b/ui/html/pages/view.tmpl.html
@@ -7,9 +7,9 @@
     </div>
     <pre><code>{{.Content}}</code></pre>
     <div class="metadata">
-        <time>Created: {{.Created}}</time>
+        <time>Created: {{humanDate .Created}}</time>
         <br />
-        <time>Expires: {{.Expires}}</time>
+        <time>Expires: {{humanDate .Expires}}</time>
     </div>
 </div>
 {{end}} {{end}}
