update recent changes

--- a/ui/html/pages/view.tmpl.html
+++ b/ui/html/pages/view.tmpl.html
@@ -1,15 +1,18 @@
-{{define "title"}}Snippet #{{.Snippet.ID}}{{end}} {{define "main"}} {{with
-.Snippet}}
-<div class="snippet">
-    <div class="metadata">
-        <strong>{{.Title}}</strong>
-        <span>#{{.ID}}</span>
+{{define "title"}}Snippet #{{.Snippet.ID}}{{end}} 
+
+{{define "main"}}
+    {{with .Snippet}}
+    <div class="snippet">
+        <div class="metadata">
+            <strong>{{.Title}}</strong>
+            <span>#{{.ID}}</span>
+        </div>
+        <pre><code>{{.Content}}</code></pre>
+        <div class="metadata">
+            <time>Created: {{humanDate .Created}}</time>
+            <br />
+            <time>Expires: {{humanDate .Expires}}</time>
+        </div>
     </div>
-    <pre><code>{{.Content}}</code></pre>
-    <div class="metadata">
-        <time>Created: {{humanDate .Created}}</time>
-        <br />
-        <time>Expires: {{humanDate .Expires}}</time>
-    </div>
-</div>
-{{end}} {{end}}
+    {{end}} 
+{{end}}
